<resources>
    <string name="app_name">Everywhere Launcher Extension</string>

    <string name="enable_accessibility_service">Enable ACCESSIBILITY SERVICE</string>

    <string name="accessibility_service_description">Needed to retrieve the current top app from the system as well as for executing special button clicks via an action</string>

    <string name="accessibility_state">Accessibility Service running</string>
    <string name="version">App Version</string>
    <string name="newest_version">Newest Version</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="readme">Readme</string>
    <string name="releases">Releases</string>
    <string name="unknown">Unknown</string>

    <string name="already_running">Accessibility Service is already running</string>
</resources>
